# torchresidual

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: DESIGN.md  FAQ.md  QUICKSTART.md  README.md
examples/: advanced_usage.py  basic_usage.py  lstm_residual.py
scripts/: build.sh  clean.sh  publish-test.sh  publish.sh
tests/: test_alpha.py  test_core.py  test_integration.py  test_wrappers.py
torchresidual/: __init__.py  alpha.py  core.py  py.typed  wrappers.py
