[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchresidual"
version = "0.1.0"
description = "Flexible residual connections for PyTorch"
readme = {file = "README.md", content-type = "text/markdown"}
license = "MIT"
authors = [
    {name = "Víctor Garzón", email = "garzonsanchezvictor@gmail.com"},
]
maintainers = [
    {name = "Víctor Garzón", email = "garzonsanchezvictor@gmail.com"},
]
requires-python = ">=3.9"
keywords = [
    "pytorch",
    "deep-learning",
    "residual",
    "skip-connections",
    "neural-networks",
    "resnet",
    "densenet",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = ["torch>=1.9.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "numpy"]

[project.urls]
Homepage = "https://github.com/v-garzon/torchresidual"
Repository = "https://github.com/v-garzon/torchresidual"
Documentation = "https://github.com/v-garzon/torchresidual#readme"
"Bug Tracker" = "https://github.com/v-garzon/torchresidual/issues"
Changelog = "https://github.com/v-garzon/torchresidual/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchresidual*"]

[tool.setuptools.package-data]
torchresidual = ["py.typed"]
